--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+*, body { box-sizing: border-box; }
+
 body {
   background-color: #000;
 }
@@ -27,7 +29,30 @@ video {
   width: 100%;
   height: 2%;
   bottom: 0;
-  text-align: center;
   background: #333;
-  color: #eee;
+  color: #999;
 }
+
+.footer > div {
+  display: inline-block;
+  width: 49%;
+}
+
+.footer .left {
+  text-align: left;
+  padding-left: 1%;
+}
+
+.footer .right {
+  text-align: right;
+  padding-right: 1%;
+}
+
+a { 
+  color: #999; 
+  text-decoration: none;
+}
+a:hover { color: #eee; }
+a:visited { color: #999; }
+
+
