--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .backer {
   text-align: center;
-  padding-top: 25%;  
+  padding-top: 20%;  
   color: #ddd;
 }
 
@@ -29,14 +29,22 @@ video {
   width: 100%;
   height: 2%;
   bottom: 0;
+  padding: 2px;
   background: #333;
+  font-size: 0.8em;
   color: #999;
 }
 
 .footer > div {
   display: inline-block;
-  width: 49%;
 }
+
+.footer > .left,
+.footer > .right {
+  width: 40%;
+}
+
+.footer > .center { width: 15%; }
 
 .footer .left {
   text-align: left;
