--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 }
 
 .video,
-.backer {
+.backer,
+.fallback {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -18,6 +19,14 @@ body {
   padding-top: 20%;  
   color: #ddd;
   display: none;
+}
+
+.fallback {
+  display: none; 
+}
+
+.fallback > img {
+  width: 100%;
 }
 
 video {
