Mobile fallback implemented.

--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ body {
 }
 
 .fallback > img {
+  position: absolute;
   width: 100%;
+  top: 50%;
+  margin-top: -50%;
 }
 
 video {
   width: 100%;
   height: 100%;  
+  line-height: 100%;
 }
 
 .icon {
