--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: #000;
+  overflow: hidden;
 }
 
 .video,
@@ -51,7 +52,7 @@ video {
 .footer {
   position: fixed;
   width: 100%;
-  height: 2%;
+  height: 20px;
   bottom: 0;
   padding: 2px;
   background: #333;
@@ -61,6 +62,17 @@ video {
 
 .footer > div {
   display: inline-block;
+}
+
+.footer .footer-toggle {
+  margin: 0 auto;
+  width: 100%
+  height: 25px;
+  border-radius: 5px 5px 0 0;
+  color: white;
+  background: #333;
+  text-align: center;
+  display: none;
 }
 
 .footer > .left,
@@ -90,4 +102,30 @@ a {
 a:visited { color: #999; }
 a:hover { color: #eee; }
 
+@media(max-width: 500px) {
+  
+  .footer {
+    position: absolute;
+    top: 95%;
+    height: auto; 
+  }
 
+  .footer .footer-toggle {
+    display: block;
+  }
+
+  .footer .left,
+  .footer .center,
+  .footer .right {
+    text-align: center;
+    font-size: 1.5em;
+    width: 100%;
+    padding: 5px;
+    border-bottom: 1px solid #555;
+  }
+  
+  .icon {
+    height: 1.5em;
+    width: 2.5em;
+  }
+}
